--- a/RecMobile/Base.lproj/Main.storyboard
+++ b/RecMobile/Base.lproj/Main.storyboard
@@ -21,5 +21,23 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
         </scene>
+        <!--Image Display View Controller-->
+        <scene sceneID="W56-ZN-aLJ">
+            <objects>
+                <viewController storyboardIdentifier="displayController" id="lSC-v4-DGX" customClass="RMImageDisplayViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Czc-Yd-MIE"/>
+                        <viewControllerLayoutGuide type="bottom" id="dEf-mq-lFJ"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="80U-kg-egS">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="uAV-hq-B2S" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="923" y="286"/>
+        </scene>
     </scenes>
 </document>
